<resources>
    <string name="app_name">A2</string>

    <string name="mNewGameButton">New Game</string>
    <string name="mOptionsButton">Options</string>
    <string name="mQuitButton">Quit</string>
    <string name="mTitleText">HANGMAN</string>

    <string name="oDiffText">Difficulty: </string>
    <string name="oClearButton">Clear Score</string>

    <string name="oTriesText">Number of Tries: </string>
    <string name="oEasyRadio">Easy</string>
    <string name="oMediumRadio">Medium</string>
    <string name="oHardRadio">Hard</string>

    <string name="gHangedText">HANGED MAN</string>
    <string name="gTriesText">Number of Tries Left:</string>
    <string name="gSubmitButton">SUBMIT</string>
    <string name="gRestartButton">Restart</string>
    <string name="gCharHint">Guess Your Letter Here</string>

    <string name="Tries">10</string>
    <string name="maxTries">10</string>
    <string name="Score">0</string>
    <string name="ScoreText">Score: </string>

    <string name="BackButton">Back</string>
</resources>
