<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/mTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/mTitleText"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="45sp" />

        <Button
            android:id="@+id/mNewGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mNewGameButton" />

        <Button
            android:id="@+id/mOptionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mOptionsButton" />

        <Button
            android:id="@+id/mQuitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mQuitButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>