<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BackButton" />

        <TextView
            android:id="@+id/gHangedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/gHangedText"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

        <Button
            android:id="@+id/gRestartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_weight="1"
            android:text="@string/gRestartButton"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/gImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/alert_light_frame" />

        <TextView
            android:id="@+id/gWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:padding="30dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/gTriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/gTriesText" />

            <EditText
                android:id="@+id/gTries"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:editable="false"
                android:ems="10"
                android:inputType="number"
                android:text="@string/Tries" />

        </LinearLayout>

        <EditText
            android:id="@+id/gChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:editable="true"
            android:gravity="center_horizontal"
            android:hint="@string/gCharHint"
            android:inputType="textCapCharacters"
            android:padding="10dp" />

        <Button
            android:id="@+id/gSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/gSubmitButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/gScoreText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/ScoreText" />

            <TextView
                android:id="@+id/gScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/Score" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>